Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108754

Video not stretched properly

XMLWordPrintable

    • Linux/Yocto
    • 2d5a8d288 (dev), 4f8c336f7 (6.6), 4540ac00e (tqtc/lts-6.5), e7b801361 (dev), a2d7b3b07 (6.7), 27cbecee1 (6.6), 3e9e5a74a (tqtc/lts-6.5)
    • Multimedia Wk7

      Some video files are not correctly stretched, or at least not stretched the same way as other media players do.

      I am not sure what exactly is causing a video to be stretched in other players, but a video file that says it is in 720x576 resolution and is shown at this size in Qt. However, in other players it is instead shown at 1024x567 size.

        For Gerrit Dashboard: QTBUG-108754
        # Subject Branch Project Status CR V

            timblechmann tim blechmann
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: