Handle non-standard pixel aspect ratios by the ffmpeg backend

Videos may have some specific pixel aspect ratio which means
that video frames should be scaled on drawing.

The patch handles such videos an makes them draw properly.

Task-number: QTBUG-108754
Change-Id: Iddfa37b55bccde35d97e64ac58b4f639ea51451b
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 2d5a8d28841fba0b0c4d8ed67dcf91f3bfafe486)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 4f8c336f7ca4b47700a0ba3bb021dec899d7937b)